--- a/src/app/modais/planos/planos-modal/planos.component.html
+++ b/src/app/modais/planos/planos-modal/planos.component.html
@@ -9,55 +9,12 @@
   </div>
 
   <div class="planos">
-    <div class="card p-6" fxFlex fxLayout="column" fxLayoutAlign="start center">
-      <h2 class="headline my-6">BASIC</h2>
+    <div class="card p-6" fxFlex fxLayout="column" fxLayoutAlign="start center" *ngFor="let plano of listaPlanos">
+      <h2 class="headline my-6">{{ plano.dsPlano }}</h2>
 
-      <div class="body-1">Lorem ipsum dolor</div>
-      <div class="body-1">Lorem ipsum dolor</div>
-      <div class="body-1">Lorem ipsum dolor</div>
-      <div class="body-1">Lorem ipsum dolor</div>
+      <div class="body-1" *ngFor="let beneficio of plano.beneficios">{{ beneficio.dsBeneficio }}</div>
 
-      <h3 class="display-2 font-bold my-6">Gratis</h3>
-
-      <button
-        class="rounded-full max-w-full w-200"
-        mat-raised-button color="primary"
-        type="button" [mat-dialog-close]="true">
-        CONTRATAR
-      </button>
-    </div>
-
-    <div class="card p-6" fxFlex fxLayout="column" fxLayoutAlign="start center">
-      <h2 class="headline my-6">PREMIUM</h2>
-
-      <div class="body-1">Lorem ipsum dolor</div>
-      <div class="body-1">Lorem ipsum dolor</div>
-      <div class="body-1">Lorem ipsum dolor</div>
-      <div class="body-1">Lorem ipsum dolor</div>
-
-      <h3 class="display-2 font-bold my-6">
-        40,00<span class="text-secondary headline align-top">R$</span>
-      </h3>
-
-      <button
-        class="rounded-full max-w-full w-200"
-        mat-raised-button color="primary"
-        type="button" [mat-dialog-close]="true">
-        CONTRATAR
-      </button>
-    </div>
-
-    <div class="card p-6" fxFlex fxLayout="column" fxLayoutAlign="start center">
-      <h2 class="headline my-6">PRO</h2>
-
-      <div class="body-1">Lorem ipsum dolor</div>
-      <div class="body-1">Lorem ipsum dolor</div>
-      <div class="body-1">Lorem ipsum dolor</div>
-      <div class="body-1">Lorem ipsum dolor</div>
-
-      <h3 class="display-2 font-bold my-6">
-        100,00<span class="text-secondary headline align-top">R$</span>
-      </h3>
+      <h3 class="display-2 font-bold my-6">{{ plano.preco }}</h3>
 
       <button
         class="rounded-full max-w-full w-200"
