--- a/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.scss
+++ b/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.scss
@@ -1,35 +1,44 @@
+// STYLE DO FILTRO
 .filter {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+  margin-bottom: 2rem;
+  flex-wrap: wrap;
+
+  .pesquisa-opcao {
     display: flex;
-    align-items: center;
+    width: 55%;
     justify-content: space-between;
-    margin-bottom: 2rem;
-
-    .search {
-        width: 100%;
-        max-width: 35rem;
-
-        mat-form-field {
-            border-bottom: 1px solid rgb(38, 43, 57);
-            width: 100%;
-        }
+    flex-wrap: wrap;
+    .inptPes {
+        width: 300px;
     }
-
     .option {
-        mat-form-field {
-            width: 57%;
-        }
+      justify-content: right;
     }
+  }
 
-    .btnAdd {
-        button {
-            background-color: rgb(35, 207, 92);
-            color: rgb(240, 255, 255);
-        }
+  .botao-view {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    width: 25%;
+    max-width: 40%;
+    flex-wrap: wrap;
+    .btnAdd{
+      background-color: rgb(35, 207, 92);
+      color: rgb(240, 255, 255);
     }
+    .viewPag{
+      margin-left: 5%;
+    }
+  }
 
-    mat-label {
-        color: rgb(38, 43, 57);
-    }
+  .label{
+    color: rgb(38, 43, 57);
+  }
 }
 
 // Deixando a largura da tabela em 100%
