--- a/src/app/pages/caixa/fluxo-caixa/fluxo-caixa.component.html
+++ b/src/app/pages/caixa/fluxo-caixa/fluxo-caixa.component.html
@@ -1,1 +1,25 @@
-<p>fluxo-caixa works!</p>
+<div class="filter">
+    <div class="search">
+        <mat-form-field appearance="standard">
+            <mat-label>Pesquisar venda</mat-label>
+            <input matInput />
+        </mat-form-field>
+    </div>
+
+    <div class="option">
+        <mat-form-field appearance="standard">
+            <mat-label>Status</mat-label>
+            <mat-select>
+                <mat-option value="one">Todas</mat-option>
+                <mat-option value="two">Cabelo</mat-option>
+                <mat-option value="three">Barba</mat-option>
+            </mat-select>
+        </mat-form-field>
+    </div>
+    <div class="btnAdd">
+        <button mat-button>Adicionar venda</button>
+    </div>
+    <div class="icon-csv">
+        <img src="../../../../assets/img/csv.svg" alt="icone csv">
+    </div>
+</div>
