--- a/src/app/pages/caixa/fluxo-caixa/fluxo-caixa.component.scss
+++ b/src/app/pages/caixa/fluxo-caixa/fluxo-caixa.component.scss
@@ -2,21 +2,17 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    gap: 50px;
     .search{
         width: 50%;
-        margin-right: 36px;
         mat-form-field{
             display: inline;
         }
-    }
-    .option{
-        margin-right: 45px;
     }
     .btnAdd{
         border-radius: 5px;
         background: #DAAA00;
         color: #ffffff;
-        margin-right: 36px;
         padding: 8px 16px;
     }
 }
