--- a/src/app/pages/caixa/fluxo-caixa/fluxo-caixa.component.scss
+++ b/src/app/pages/caixa/fluxo-caixa/fluxo-caixa.component.scss
@@ -1,8 +1,10 @@
+// Filtro
 .filter{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     gap: 50px;
+    margin-bottom: 30px;
     .search{
         width: 50%;
         mat-form-field{
@@ -14,5 +16,51 @@
         background: #DAAA00;
         color: #ffffff;
         padding: 8px 16px;
+    }
+    .icon-csv{
+        cursor: pointer;
+    }
+}
+
+
+// Tabela
+.example-container {
+    height: 400px;
+    width: 70%;
+    overflow: auto;
+}
+
+table {
+    width: 100%;
+}
+
+.tabela_fluxo-caixa{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+// Descriçao da venda
+.descricao{
+    margin-left: 90px;
+    .total{
+        h3{
+            margin-bottom: 10px;
+        }
+    }
+    .btn{
+        display: flex;
+        justify-content: center;
+        margin-top: 50px;
+        .btn-fechar_caixa{
+            border-radius: 5px;
+            background: #DAAA00;
+            color: #ffffff;
+            width: 168px;
+            height: 45px;
+            flex-shrink: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     }
 }
