--- a/src/@vex/layout/quickpanel/quickpanel.component.html
+++ b/src/@vex/layout/quickpanel/quickpanel.component.html
@@ -9,10 +9,8 @@
 <mat-nav-list>
   <h3 matSubheader>Agendamentos do dia</h3>
   <div *ngFor="let agendaHoje of listaAgendamentos">
-    <div *ngFor="let hora of horaAgendamento">
-      <a [routerLink]="[]" mat-list-item>
+      <a [routerLink]="[]" mat-list-item *ngFor="let horaServico of horaAgendamento">
         <h4 matLine>{{ agendaHoje.cliente.nome }}</h4>
-        <p matLine>{{ hora }}</p>
+        <p matLine >{{ horaServico }}</p>
       </a>
-    </div>
   </div>
