--- a/src/app/modais/planos/planos-modal/planos.component.html
+++ b/src/app/modais/planos/planos-modal/planos.component.html
@@ -62,7 +62,7 @@
       <button
         class="rounded-full max-w-full w-200"
         mat-raised-button color="primary"
-        type="button" [mat-dialog-close]="true">
+        type="button" [mat-dialog-close]="true" (click)="contratarPlano()">
         CONTRATAR
       </button>
     </div>
