--- a/src/app/pages/caixa/fluxo-caixa/fluxo-caixa.component.scss
+++ b/src/app/pages/caixa/fluxo-caixa/fluxo-caixa.component.scss
@@ -2,8 +2,9 @@
 .filter{
     display: flex;
     align-items: center;
+    justify-content: flex-start;
     flex-wrap: wrap;
-    gap: 50px;
+    gap: 20px;
     margin-bottom: 30px;
     .search{
         width: 50%;
@@ -13,9 +14,12 @@
     }
     .btnAdd{
         border-radius: 5px;
-        background: #DAAA00;
         color: #ffffff;
+        background: #DAAA00;
         padding: 8px 16px;
+        button{
+            background: #DAAA00;
+        }
     }
     .icon-csv{
         cursor: pointer;
