--- a/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
+++ b/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
@@ -88,7 +88,7 @@
                     mat-icon-button
                     aria-label="ícone Button"
                     class="icon-spacing"
-                    (click)="abrirModalDeletar(element.nome)"
+                    (click)="abrirModalDeletar(element)"
                 >
                     <mat-icon color="warn">delete</mat-icon>
                 </button>
