--- a/src/app/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.html
+++ b/src/app/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.html
@@ -128,9 +128,9 @@
             <button mat-button mat-dialog-close>Cancelar</button>
             <button
                 mat-button
-                [mat-dialog-close]="true"
                 mat-raised-button
                 color="primary"
+                (click)="cadastrarServico()"
             >
                 Adicionar
             </button>
