--- a/src/@vex/layout/quickpanel/quickpanel.component.html
+++ b/src/@vex/layout/quickpanel/quickpanel.component.html
@@ -9,8 +9,8 @@
 <mat-nav-list>
   <h3 matSubheader>Agendamentos do dia</h3>
   <div *ngFor="let agendaHoje of listaAgendamentos">
-      <a [routerLink]="[]" mat-list-item *ngFor="let horaServico of horaAgendamento">
+      <a [routerLink]="[]" mat-list-item>
         <h4 matLine>{{ agendaHoje.cliente.nome }}</h4>
-        <p matLine >{{ horaServico }}</p>
+        <p matLine >{{ agendaHoje.dtAtendimento | date: "hh:mm"  }}</p>
       </a>
   </div>
