--- a/src/app/lib/componentes/izi-table/izi-table.component.html
+++ b/src/app/lib/componentes/izi-table/izi-table.component.html
@@ -1,1 +1,37 @@
-<p>izi-table works!</p>
+<table mat-table [dataSource]="dataSource">
+  <caption>Lista de Serviços</caption>
+
+  <ng-container matColumnDef="nome">
+    <th mat-header-cell *matHeaderCellDef> Nome </th>
+    <td mat-cell *matCellDef="let servico"> {{ servico.nome }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="preco">
+    <th mat-header-cell *matHeaderCellDef> Preço </th>
+    <td mat-cell *matCellDef="let servico"> {{ servico.preco }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="descricao">
+    <th mat-header-cell *matHeaderCellDef> Descrição </th>
+    <td mat-cell *matCellDef="let servico"> {{ servico.descricao }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="tempoEstimado">
+    <th mat-header-cell *matHeaderCellDef> Tempo Estimado </th>
+    <td mat-cell *matCellDef="let servico"> {{ servico.tempoEstimado }} minutos </td>
+  </ng-container>
+
+  <ng-container matColumnDef="categoria">
+    <th mat-header-cell *matHeaderCellDef> Categoria </th>
+    <td mat-cell *matCellDef="let servico"> {{ servico.categoria }} </td>
+  </ng-container>
+
+  <mat-paginator
+        [pageSizeOptions]="[5, 10, 20]"
+        showFirstLastButtons
+        aria-label="Selecionar página do produto">
+    </mat-paginator>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
