--- a/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
+++ b/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
@@ -34,84 +34,9 @@
     </div>
 </div>
 
-<!-- Tabela de serviços -->
-<div class="mat-elevation-z8">
-    <table aria-label="tableServicos" mat-table [dataSource]="dataSource">
-        <!-- Aplicação do Serviço -->
-        <ng-container matColumnDef="aplicacao">
-            <th class="color-title" mat-header-cell *matHeaderCellDef>
-                Categoria
-            </th>
-            <td mat-cell *matCellDef="let element">{{ element.categoria }}</td>
-        </ng-container>
-
-        <!-- Serviço -->
-        <ng-container matColumnDef="servico">
-            <th class="color-title" mat-header-cell *matHeaderCellDef>
-                Nome do Serviço
-            </th>
-            <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
-        </ng-container>
-
-        <!-- Descrição do Serviço -->
-        <ng-container matColumnDef="descricao">
-            <th class="color-title" mat-header-cell *matHeaderCellDef>
-                Descrição do Serviço
-            </th>
-            <td mat-cell *matCellDef="let element">{{ element.descricao }}</td>
-        </ng-container>
-
-        <!-- Tempo do Serviço -->
-        <ng-container matColumnDef="tempo">
-            <th class="color-title" mat-header-cell *matHeaderCellDef>Tempo</th>
-            <td mat-cell *matCellDef="let element">{{ element.tempoEstimado }}</td>
-        </ng-container>
-
-        <!-- Preço do Serviço -->
-        <ng-container matColumnDef="preco">
-            <th class="color-title" mat-header-cell *matHeaderCellDef>Preço</th>
-            <td mat-cell *matCellDef="let element">{{ element.valor }}</td>
-        </ng-container>
-
-        <!-- Ícone da tabela -->
-        <ng-container matColumnDef="icone">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td class="layout-menu" mat-cell *matCellDef="let element">
-                <button
-                    mat-icon-button
-                    aria-label="ícone Button"
-                    class="icon-spacing"
-                >
-                    <mat-icon color="primary"> border_color</mat-icon>
-                </button>
-                <button
-                    mat-icon-button
-                    aria-label="ícone Button"
-                    class="icon-spacing"
-                    (click)="abrirModalDeletar(element)"
-                >
-                    <mat-icon color="warn">delete</mat-icon>
-                </button>
-                <button
-                    mat-icon-button
-                    [matMenuTriggerFor]="menu"
-                    aria-label="Example icon-button with a menu"
-                >
-                    <mat-icon>more_vert</mat-icon>
-                </button>
-            </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-
-    <mat-paginator
-        [pageSizeOptions]="[5, 10, 20]"
-        showFirstLastButtons
-        aria-label="Selecionar página do produto"
-    >
-    </mat-paginator>
+<!-- tabela lista de servicos com izi-table -->
+<div *ngIf="listaServicos.length > 0">
+  <vex-izi-table [listaDados]="listaServicos"></vex-izi-table>
 </div>
 
 <mat-menu #menu="matMenu">
